--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <p class="details">🎊 Trân trọng kính mời <strong id="guestName"></strong> đến tham dự lễ tốt nghiệp đầy ý nghĩa của Nguyễn Trần Kim Ngân! 🎊</p>
         <p class="details"><strong>📅 Thời gian:</strong> 13:30 PM, ngày 28 tháng 3 năm 2025</p>
         <p class="details"><strong>📍 Địa điểm:</strong> The ADORA Center, 431 Đ. Hoàng Văn Thụ, Phường 4, Tân Bình, Hồ Chí Minh</p>
-        <a href="xacnhan.html" class="btn">💌 Xác nhận tham gia 💌</a>
+       <a href="./xacnhan.html" class="btn">💌 Xác nhận tham gia 💌</a>
     </div>
 
     
