--- a/xacnhan.html
+++ b/xacnhan.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xác Nhận Tham Gia</title>
+    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@700&display=swap" rel="stylesheet">
     <style>
         body {
+            font-family: 'Comic Sans MS', cursive, sans-serif;
             text-align: center;
             background-color: #dff6ff;
             padding: 20px;
@@ -19,6 +21,10 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border: 3px solid #28a745;
         }
+        h1 {
+            font-family: 'Be Vietnam Pro', sans-serif;
+            color: #000;
+        }
         .btn {
             display: inline-block;
             background-color: #28a745;
@@ -28,9 +34,13 @@
             border-radius: 8px;
             font-weight: bold;
             margin-top: 20px;
+            box-shadow: 2px 2px 10px rgba(40, 167, 69, 0.4);
+            transition: 0.3s;
+            cursor: pointer;
         }
         .btn:hover {
             background-color: #218838;
+            transform: scale(1.1);
         }
     </style>
 </head>
